--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -2,6 +2,13 @@
     "version": "0.2.0",
     "configurations": [
         {
+            "name": "Python Debugger: Current File",
+            "type": "debugpy",
+            "request": "launch",
+            "program": "${file}",
+            "console": "integratedTerminal"
+        },
+        {
             "name": "Run Backend",
             "type": "debugpy",
             "request": "launch",
@@ -14,7 +21,9 @@
             "type": "node",
             "request": "launch",
             "program": "${workspaceFolder}/frontend/node_modules/react-scripts/bin/react-scripts.js",
-            "args": ["start"],
+            "args": [
+                "start"
+            ],
             "cwd": "${workspaceFolder}/frontend",
             "console": "integratedTerminal",
             "internalConsoleOptions": "neverOpen"
@@ -23,7 +32,10 @@
     "compounds": [
         {
             "name": "Launch Backend and Frontend",
-            "configurations": ["Run Backend", "Run Frontend"]
+            "configurations": [
+                "Run Backend",
+                "Run Frontend"
+            ]
         }
     ]
 }
